--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <!-- Mobile menu button is now handled by JavaScript -->
             <ul class="nav-links">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="pages/diseases.html">Diseases</a></li>
-                <li><a href="pages/treatments.html">Treatments</a></li>
-                <li><a href="pages/prevention.html">Prevention</a></li>
-                <li><a href="pages/about.html">About Us</a></li>
+                <li><a href="diseases.html">Diseases</a></li>
+                <li><a href="treatments.html">Treatments</a></li>
+                <li><a href="prevention.html">Prevention</a></li>
+                <li><a href="about.html">About Us</a></li>
             </ul>
         </nav>
     </header>
