--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                 <i class="fas fa-bars"></i>
             </button>
             <ul class="nav-links">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="diseases.html">Diseases</a></li>
                 <li><a href="treatments.html">Treatments</a></li>
                 <li><a href="prevention.html">Prevention</a></li>
