--- a/prevention.html
+++ b/prevention.html
@@ -15,7 +15,7 @@
                 <h1>Health Guide</h1>
             </div>
             <ul class="nav-links">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="diseases.html">Diseases</a></li>
                 <li><a href="treatments.html">Treatments</a></li>
                 <li><a href="prevention.html" class="active">Prevention</a></li>
