--- a/about.html
+++ b/about.html
@@ -15,15 +15,13 @@
                 <i class="fas fa-heartbeat"></i>
                 <h1>Health Guide</h1>
             </div>
-            <button class="mobile-menu-button">
-                <i class="fas fa-bars"></i>
-            </button>
+            <!-- Mobile menu button is now handled by JavaScript -->
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="diseases.html">Diseases</a></li>
                 <li><a href="treatments.html">Treatments</a></li>
                 <li><a href="prevention.html">Prevention</a></li>
-                <li><a href="about.html" class="active">About Us</a></li>
+                <li><a href="about.html">About Us</a></li>
             </ul>
         </nav>
     </header>
