--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                 <li><a href="diseases.html">Diseases</a></li>
                 <li><a href="treatments.html">Treatments</a></li>
                 <li><a href="prevention.html">Prevention</a></li>
-                <li><a href="about.html">About Us</a></li>
+                <li><a href="about.html" class="active">About Us</a></li>
             </ul>
         </nav>
     </header>
