--- a/about.html
+++ b/about.html
@@ -91,7 +91,11 @@
                     </div>
                     <div class="achievement-item">
                         <i class="fas fa-trophy"></i>
-                        <span>3rd place in North Africa in SeaPerch 2023</span>
+                        <span>3rd place in North Africa in SeaPerch 2025</span>
+                    </div>
+                    <div class="achievement-item">
+                        <i class="fas fa-trophy"></i>
+                        <span>1st place in North Africa in SeaPerch 2023</span>
                     </div>
                 </div>
             </div>
