--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
             </div>
             <!-- Mobile menu button is now handled by JavaScript -->
             <ul class="nav-links">
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="diseases.html">Diseases</a></li>
                 <li><a href="treatments.html">Treatments</a></li>
                 <li><a href="prevention.html">Prevention</a></li>
@@ -70,7 +70,7 @@
                         <div class="skill-card">
                             <i class="fas fa-code"></i>
                             <h3>Programming</h3>
-                            <p>Full Stack Development</p>
+                            <p>Front End</p>
                         </div>
                         <div class="skill-card">
                             <i class="fas fa-microchip"></i>
